--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,12 @@ name: CI
 on: push
 
 jobs:
-  lint:
+  CI:
     runs-on: ubuntu-latest
     container: python:3.7.7-buster
     steps:
       - uses: actions/checkout@v2
-      - name: Install black
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.dev.txt
