Simple overrides implementation

--- a/configatron/tests/integrations/fixtures/simple.ini
+++ b/configatron/tests/integrations/fixtures/simple.ini
@@ -5,7 +5,8 @@
 number = 123                                                                                    ;comment
 path                                =                        /a/b/c ;comment
 string                     = "val" ;comment
-
+over            = "blend"
+over<production>            = "production"
 
 
 
